CHANGES IN VERSION 1.24.0
-------------------------
NEW FEATURES

    o migrated unit test from RUnit to testthat


CHANGES IN VERSION 1.10.0
-------------------------
NEW FEATURES

    o qExportWig gained createBigWig argument and can now create bigWig files directly

    o qQCReport now also produces base quality plots for bam-file projects by sampling reads from the bam files

    o qCount, qProfile and qExportWig have gained a includeSecondary argument to include/exclude secondary alignments while counting

CHANGES IN VERSION 1.8.0
-----------------------
PUBLICATION

    o A paper describing the QuasR package has been published (see citation("QuasR")):
      Gaidatzis D. et al., Bioinformatics, 2015. doi: 10.1093/bioinformatics/btu781

NEW FEATURES

    o started implementing support for BiocParallel, allowing QuasR to also run on batch clusters
      (support is currently limited to qQCReport)

CHANGES IN VERSION 1.4.0
-----------------------

NEW FEATURES

    o new arguments mapqMin and mapqMaxm in qCount, qProfile, qMeth and qExportWig allow to select alignments based on mapping quality

    o qAlign gains checkOnly argument which allows checking for existing alignments without triggering new alignments in case of missing ones

CHANGES IN VERSION 1.2.0
-----------------------

NEW FEATURES

    o new miRNA-seq sample data; vignette has now workflows for ChIP-seq, RNA-seq, smRNA-seq/miRNA-seq, Bis-seq and allele-specific analysis

    o qMeth can report methylation states for individual molecules (reportLevel="alignment")

    o qCount/qProfile gain argument to ignore spliced reads in counting


CHANGES IN VERSION 1.0.0
-----------------------

INITIAL RELEASE

    o ChIP-seq with support for single-end, paired-end and allele specific samples

    o RNA-seq with support for spliced alignment, single-end, paired-end and allele specific samples

    o Bis-seq with support for single-end, paired-end and allele specific samples